fix: Select2 dropdown not showing in modal
- Add dropdownParent: $('body') to Select2 init to render dropdown outside modal
- Add z-index: 100200 to .select2-container--open to ensure dropdown appears above modal

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -899,6 +899,11 @@
     min-height: 32px;
 }
 
+/* Fix Select2 dropdown in modal - attach to body */
+.select2-container--open {
+    z-index: 100200;
+}
+
 .select2-container--default .select2-selection--multiple {
     min-height: 32px;
     border-color: var(--mxp-border-color);
